# the-office

./: .buildinfo  .gitignore  employee.html  employee.py  genindex.html  index.html  modules.html  office.html  office.py  py-modindex.html  pyproject.toml  search.html  searchindex.js
_sources/: index.rst.txt
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  search.html
docs/_build/html/_sources/: index.rst.txt
