[tool.poetry]
name = "the-office"
version = "0.1.0"
description = ""
authors = ["Martin Campbell <martin@martincampbell.eu>"]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^5.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
